update to index & css file

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <div>
               <p class="aboutme-spacing">I'm a passionate, purpose-driven, Frontend/UX Developer that is happily married to the most wonderful woman, is a coffee enthusiast, loves to solve problems and find solutions, and serves a gracious, forgiving, and loving Jesus.</p>
-              <p class="aboutme-spacing">I'd like to break down "purpose-driven". I’m passionate about developing an online presence for individuals and companies to give them the online presence that they need in this crazy digital world we live in. More so than just building a website or developing a feature, to simply be able to serve someone, an entire company, and even more so, a company's target audience, and allow them to live a better and more efficient life from what I’ve developed...that's what my self-purpose drives me to accomplish.</p>
+              <p class="aboutme-spacing">I'd like to break down "purpose-driven". I’m passionate about developing an online presence for individuals and companies to give them exactly what they need in the crazy digital world we live in. More so than just building a website or developing a feature, to simply be able to serve someone, an entire company, and even more so, a company's target audience, and allow them to live a better and more efficient life from what I’ve developed...that's what my self-purpose drives me to accomplish.</p>
               <p class="aboutme-spacing">I am proficient in Frontend technologies such as HTML, Bootstrap, and CSS, have solid fundemental knowledge of vanilla JavaScript and jQuery, and a basic, beginners, understanding of PHP. Being a professional learner and being apart of an industry where programming technologies are forever evolving, I am constantly perfecting my craft as a Developer.</p>
               <p>Take a look around and feel free to <a id="contactWord" href=#contact><span style="color: #262626;"><strong>contact me</strong></span></a> with any requests or questions. Lastly, follow me on social media and check out my other online profiles to get to know me better and see more of my work:</p>
               <div class="social-media-list">
@@ -126,7 +126,7 @@
 
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col xs-12">
-            <p class="services">Portfolio</p>
+            <h3 class="services">Portfolio</h3>
           </div>
         </div>
         <div class="row">
@@ -157,16 +157,23 @@
           </div>
         </div>
       </div>
-        <div class="row">
-          <div class="col-lg-6 col-md-6 col-sm-12 col xs-12">
-            <div class="thumbnail img-wrap">
-              <img class="img" src="img/IBT logo3.jpg" alt="Project Screenshot">
-              <div class="img-description">
-                <p class="img-text">Coming Soon!</p>
-              </div>
-            </div>
-          </div>
+
+      <section id="codepen-section">
+        <h3 class="services">Codepen Fun</h3>
+        <div class="codepen top">
+          <p data-height="537" data-theme-id="light" data-slug-hash="LQZxdJ" data-default-tab="result" data-user="jhorner32" data-embed-version="2" data-pen-title="FCC Project #4 - Local Weather App" class="codepen">See the Pen <a href="https://codepen.io/jhorner32/pen/LQZxdJ/">FCC Project #4 - Local Weather App</a> by Jeff Horner (<a href="https://codepen.io/jhorner32">@jhorner32</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+          <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
         </div>
+        <div class="codepen">
+          <p data-height="537" data-theme-id="light" data-slug-hash="rpRaJO" data-default-tab="result" data-user="jhorner32" data-embed-version="2" data-pen-title="FCC Project #3 - Random Quote Project" class="codepen">See the Pen <a href="https://codepen.io/jhorner32/pen/rpRaJO/">FCC Project #3 - Random Quote Project</a> by Jeff Horner (<a href="https://codepen.io/jhorner32">@jhorner32</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+          <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+        </div>
+        <div class="codepen">
+          <p data-height="537" data-theme-id="light" data-slug-hash="aqPWwO" data-default-tab="result" data-user="jhorner32" data-embed-version="2" data-pen-title="aqPWwO" class="codepen">See the Pen <a href="https://codepen.io/jhorner32/pen/aqPWwO/">aqPWwO</a> by Jeff Horner (<a href="https://codepen.io/jhorner32">@jhorner32</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+          <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+        </div>
+        <p>See more of my small codepen projects <a style="color: #262626; font-weight: bold;" href="">here</a>.</p>
+      </section>
 
       <!-- CONTACT CONTENT -->
 
@@ -184,7 +191,7 @@
     <div id="wrapper">
       <div id="over-map">
         <h1>Reach Out</h1>
-        <p>If you are interested in any of my web development services, please complete the below contact form. I will reach out to you within 48 hours to discuss and asses your needs.</p>
+        <p>If you are interested in any of my web development services, please complete the below contact form. I will reach out to you within 48 hours to discuss and assess your needs.</p>
         <p>Want to learn web development but don't know where to start? Another passion of mine is helping people who are interested in coding but don't know where to start. Send me a message if you would like some pointers on online resources that will help turn your interest of coding into a reality.</p>
         <p><i><strong>Full Disclaimer:</strong> any reccomendations I have are completely opinionated and may not work for everybody. The suggestions I have will be based upon my own experience and the learning platforms that resonate with me in my journey of becoming the most effective self-taught Developer I can be.</i></p>
         <div class="row">
