small change to index file

--- a/index.html
+++ b/index.html
@@ -175,6 +175,11 @@
           <p data-height="537" data-theme-id="light" data-slug-hash="aqPWwO" data-default-tab="result" data-user="jhorner32" data-embed-version="2" data-pen-title="aqPWwO" class="codepen">See the Pen <a href="https://codepen.io/jhorner32/pen/aqPWwO/">aqPWwO</a> by Jeff Horner (<a href="https://codepen.io/jhorner32">@jhorner32</a>) on <a href="https://codepen.io">CodePen</a>.</p>
           <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
         </div>
+        <div class="codepen">
+          <p class="codepen-title">RGB Game</p>
+          <p data-height="494" data-theme-id="light" data-slug-hash="RxGKmx" data-default-tab="result" data-user="jhorner32" data-embed-version="2" data-pen-title="Color Picker Game" class="codepen">See the Pen <a href="https://codepen.io/jhorner32/pen/RxGKmx/">Color Picker Game</a> by Jeff Horner (<a href="https://codepen.io/jhorner32">@jhorner32</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+          <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+        </div>
         <p id="last">See more of my small codepen projects <a href="https://codepen.io/jhorner32/">here</a>.</p>
       </section>
 
