fixed issue with social media profiles not displaying

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
               <p class="aboutme-spacing">I'd like to break down "purpose-driven". I’m passionate about developing an online presence for individuals and companies to give them exactly what they need in the crazy digital world we live in. More so than just building a website or developing a feature, to simply be able to serve someone, an entire company, and even more so, a company's target audience, and allow them to live a better and more efficient life from what I’ve developed...that's what my self-purpose drives me to accomplish.</p>
               <p class="aboutme-spacing">I am proficient in Frontend technologies such as HTML, Bootstrap, and CSS, have solid fundemental knowledge of vanilla JavaScript and jQuery, and a basic, beginners, understanding of PHP. Being a professional learner and being apart of an industry where programming technologies are forever evolving, I am constantly perfecting my craft as a Developer.</p>
               <p>Take a look around and feel free to <a id="contactWord" href=#contact><span style="color: #262626;"><strong>contact me</strong></span></a> with any requests or questions. Lastly, follow me on social media and check out my other online profiles to get to know me better and see more of my work:</p>
-              <div class="social-media-list">
-                <a href="https://www.facebook.com/jeffnhorner" target="_blank" title="My Facebook Profile"><i class="fa fa-facebook-square social-media" aria-hidden="true"></i></a>
-                <a href="https://www.instagram.com/jeffnhorner" target="_blank" title="My Instagram Profile"><i class="fa fa-instagram social-media" aria-hidden="true"></i></a>
-                <a href="https://www.linkedin.com/in/jeff-horner-bb48124b/" target="_blank" title="My LinkedIn Profile"><i class="fa fa-linkedin-square social-media" aria-hidden="true"></i></a>
-                <a href="https://codepen.io/jhorner32/" target="_blank" title="My Codepen Profile"><i class="fa fa-codepen social-media" aria-hidden="true"></i></a>
-                <a href="https://www.freecodecamp.org/jhorner32" target="_blank" title="My FreeCodeCamp Profile"><i class="fa fa-free-code-camp social-media" aria-hidden="true"></i></a>
+              <div class="profile-list">
+                <a href="https://www.facebook.com/jeffnhorner" target="_blank" title="My Facebook Profile"><i class="fa fa-facebook-square profiles" aria-hidden="true"></i></a>
+                <a href="https://www.instagram.com/jeffnhorner" target="_blank" title="My Instagram Profile"><i class="fa fa-instagram profiles" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/jeff-horner-bb48124b/" target="_blank" title="My LinkedIn Profile"><i class="fa fa-linkedin-square profiles" aria-hidden="true"></i></a>
+                <a href="https://codepen.io/jhorner32/" target="_blank" title="My Codepen Profile"><i class="fa fa-codepen profiles" aria-hidden="true"></i></a>
+                <a href="https://www.freecodecamp.org/jhorner32" target="_blank" title="My FreeCodeCamp Profile"><i class="fa fa-free-code-camp profiles" aria-hidden="true"></i></a>
               </div>
             </div>
           </div>
@@ -162,8 +162,8 @@
         <h3 class="services">Codepen Fun</h3>
         <div class="codepen top">
           <p class="codepen-title">Location Weather App</p>
-          <p data-height="537" data-theme-id="light" data-slug-hash="LQZxdJ" data-default-tab="result" data-user="jhorner32" data-embed-version="2" data-pen-title="FCC Project #4 - Local Weather App" class="codepen">See the Pen <a href="https://codepen.io/jhorner32/pen/LQZxdJ/">FCC Project #4 - Local Weather App</a> by Jeff Horner (<a href="https://codepen.io/jhorner32">@jhorner32</a>) on <a href="https://codepen.io">CodePen</a>.</pp>
-          <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+          <iframe height='537' scrolling='no' title='FCC Project #4 - Local Weather App' src='//codepen.io/jhorner32/embed/LQZxdJ/?height=265&theme-id=light&default-tab=result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' allowgeolocation='true' style='width: 100%;'>See the Pen <a href='https://codepen.io/jhorner32/pen/LQZxdJ/'>FCC Project #4 - Local Weather App</a> by Jeff Horner (<a href='https://codepen.io/jhorner32'>@jhorner32</a>) on <a href='https://codepen.io'>CodePen</a>.
+          </iframe>
         </div>
         <div class="codepen">
           <p class="codepen-title">Random Quote Generator</p>
