added github profile

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- GOOGLE MAPS -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- TITLE -->
-    <title>Jeff Horner | Web Developer</title>
+    <title>Jeff Horner | UX Developer &#38; Designer | Web Developer</title>
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- FONT AWESOME -->
@@ -47,7 +47,7 @@
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
           <h1>Jeff Horner</h1>
-          <h3>Web Developer</h3>
+          <h3>UX Developer | Designer</h3>
         </div>
       </div>
     </div>
@@ -73,9 +73,10 @@
               <p class="aboutme-spacing">I am proficient in Frontend technologies such as HTML, Bootstrap, and CSS, have solid fundemental knowledge of vanilla JavaScript and jQuery, and a basic, beginners, understanding of PHP. Being a professional learner and being apart of an industry where programming technologies are forever evolving, I am constantly perfecting my craft as a Developer.</p>
               <p>Take a look around and feel free to <a id="contactWord" href=#contact><span style="color: #262626;"><strong>contact me</strong></span></a> with any requests or questions. Lastly, follow me on social media and check out my other online profiles to get to know me better and see more of my work:</p>
               <div class="profile-list">
-                <a href="https://www.facebook.com/jeffnhorner" target="_blank" title="My Facebook Profile"><i class="fa fa-facebook-square profiles" aria-hidden="true"></i></a>
+                <a href="https://www.facebook.com/jeffnhorner" target="_blank" title="My Facebook Profile"><i class="fa fa-facebook profiles" aria-hidden="true"></i></a>
                 <a href="https://www.instagram.com/jeffnhorner" target="_blank" title="My Instagram Profile"><i class="fa fa-instagram profiles" aria-hidden="true"></i></a>
                 <a href="https://www.linkedin.com/in/jeff-horner-bb48124b/" target="_blank" title="My LinkedIn Profile"><i class="fa fa-linkedin-square profiles" aria-hidden="true"></i></a>
+                <a href="https://github.com/jhorner32" target="_blank"><i class="fa fa-github-square profiles"></i></a>
                 <a href="https://codepen.io/jhorner32/" target="_blank" title="My Codepen Profile"><i class="fa fa-codepen profiles" aria-hidden="true"></i></a>
                 <a href="https://www.freecodecamp.org/jhorner32" target="_blank" title="My FreeCodeCamp Profile"><i class="fa fa-free-code-camp profiles" aria-hidden="true"></i></a>
               </div>
